# merchantscroll

./: .cursorignore  .dockerignore  .gitignore  .pre-commit-config.yaml  CNAME  Dockerfile  README.md  contact.json  crawl.py  entrypoint.py  index.html  info.json  manifest.webmanifest  player.html  pyproject.toml  readme.md  requirements.actions.txt  requirements.txt  run.sh  style.css  sw.js
.github/workflows/: run-crawler.yml
archetypes/: pauper.json  pauperwave.json
assets/: decklists.txt  meta.json  pauper-league-archetypes.csv  tournaments.txt
assets/2025-05-09/: pauper-challenge-32-2025-05-0912777329.json
assets/modern/: decklists.txt  modern-challenge-32-2025-05-0312774493.json  modern-challenge-32-2025-05-0312774496.json  modern-challenge-32-2025-05-0412774511.json  modern-challenge-32-2025-05-0412774516.json  modern-challenge-32-2025-05-0512774529.json  modern-challenge-32-2025-05-0612774558.json  modern-challenge-32-2025-05-1012777341.json  (+153 more)
assets/pauper/: decklists.txt  (+161 more)
docs/: new_features.md  setup.md  sow.md
examples/: analyze_local_data.py  crawl_single_tournament.py  discover_tournaments.py  enrich_colors.py  export_decklist.py
players/: identities.json
scripts/: build_archetypes.py  build_index.py  generate_pwa_icons.py  mobile_visual_check.py  start_server.py
src/: classifier.py  constants.py  crawler.py  deck_stats.py  domain.py  drawer.py  pauperwave_crawler.py  pipeline.py  player_stats.py  refresh_policy.py  saver.py  scryfall.py  utils.py
test/: test_unit.py
tests/: test_crawler.py  test_drawer.py  test_saver.py  test_unit.py
(+3962 files in other folders)
